# SudokuSolver

./: .codedocs  .travis.yml  BaseSolver_8hpp.html  BaseSolver_8hpp_source.html  CMakeLists.txt  General_8hpp.html  General_8hpp.js  General_8hpp_source.html  README.md  ReadFromFile_8hpp.html  ReadFromFile_8hpp.js  ReadFromFile_8hpp_source.html  Recursion_8hpp.html  Recursion_8hpp_source.html  SudokuBase_8hpp.html  SudokuBase_8hpp.js  SudokuBase_8hpp_source.html  annotated.html  annotated.js  classSudoku_1_1Solver_1_1BaseSolver-members.html  classSudoku_1_1Solver_1_1BaseSolver.html  classSudoku_1_1Solver_1_1BaseSolver.js  classSudoku_1_1Solver_1_1RecursionSolver-members.html  classSudoku_1_1Solver_1_1RecursionSolver.html  classSudoku_1_1Solver_1_1RecursionSolver.js  classSudoku_1_1Sudoku-members.html  classSudoku_1_1Sudoku.html  classSudoku_1_1Sudoku.js  classes.html  dir_000003_000002.html  dir_000004_000002.html  dir_0484e79f55c58bf96d6a9b9e6b01b8b9.html  dir_0484e79f55c58bf96d6a9b9e6b01b8b9.js  dir_0484e79f55c58bf96d6a9b9e6b01b8b9_dep.map  dir_0484e79f55c58bf96d6a9b9e6b01b8b9_dep.md5  dir_21ef1ce499a3f506a9a368060e11b506.html  dir_21ef1ce499a3f506a9a368060e11b506.js  dir_21ef1ce499a3f506a9a368060e11b506_dep.map  dir_21ef1ce499a3f506a9a368060e11b506_dep.md5  dir_3e8034045da2f389fb690504bd373bd1.html  (+41 more)
sudokuSolver/: CMakeLists.txt  base.hpp  io.hpp  solver.hpp
sudokuSolver/src/: CMakeLists.txt
sudokuSolver/src/base/: CMakeLists.txt  SudokuBase.cpp  SudokuBase.hpp
sudokuSolver/src/io/: CMakeLists.txt  General.cpp  General.hpp  ReadFromFile.cpp  ReadFromFile.hpp
sudokuSolver/src/solver/: BaseSolver.cpp  BaseSolver.hpp  BruteForce.hpp  CMakeLists.txt  Recursion.cpp  Recursion.hpp  SimpleSolver.hpp
test/: CMakeLists.txt  Test_Run.cpp  Test_SudokuBase.cpp  Test_SudokuBaseTest.cpp  Test_SudokuBruteForce.cpp  Test_SudokuEmptyTest.cpp  Test_SudokuReadFile.cpp  Test_SudokuReadFileTest.cpp  Test_SudokuRecursion.cpp  Test_SudokuRecursionTest.cpp
test/examples/: sudoku2.txt  sudoku3.txt  sudoku4.txt  sudoku5.txt
(+28 files in other folders)
